# Mushi

./: CONTRIBUTING.md  GITHUB_ONLY_SETUP.md  LICENSE  MODEL.md  README.md  START_HERE.md  TEST_REPORT.md  app.py  config.toml  pyproject.toml  requirements-dev.txt  requirements.txt  watch_config.yaml
config/: guilds.yaml
data/: README.md  county_centroids.csv
mushroom_watch/: __init__.py  alerts.py  analysis.py  config.py  geo.py  models.py  monitor.py  observations.py  profiles.py  recharge.py  repository.py  scoring.py  weather.py
scripts/: check_alerts.py  test_ntfy.py  update_counties.py
tests/: conftest.py  test_alerts.py  test_app.py  test_config_and_monitor.py  test_geo.py  test_github_configuration.py  test_observations.py  test_profiles.py  test_recharge.py  test_repository.py  test_scoring.py  test_weather.py
